--- a/render.yaml
+++ b/render.yaml
@@ -2,11 +2,19 @@ services:
   - type: web
     name: furima-41734
     env: docker
-    dockerfilePath: ./Dockerfile
-    startCommand: ./bin/rails server -b 0.0.0.0 -p 3000
-    envVars:
-      - key: DATABASE_URL
-        value: postgresql://furima_production_gvhx_user:p1RAhDUxQ1dqX5ngsu9ZH5C3I27fImTx@dpg-cu7ok0d6l47c73eaaup0-a/furima_production_gvhx
-      - key: SECRET_KEY_BASE
-        generateValue: true
+    region: oregon
+    dockerfilePath: ./Dockerfile  # Dockerfileのパス
     autoDeploy: true
+    plan: free
+    healthCheckPath: "/healthcheck" # 必要に応じて変更
+    envVars:
+      - key: SECRET_KEY_BASE
+        sync: false
+        value: "YOUR_SECRET_KEY_BASE"
+      - key: DATABASE_URL
+        sync: false
+        value: "YOUR_DATABASE_URL"
+      - key: RAILS_ENV
+        value: "production"
+      - key: BUNDLE_WITHOUT
+        value: "development"
