--- a/.gitattributes
+++ b/.gitattributes
@@ -7,3 +7,6 @@ db/schema.rb linguist-generated
 vendor/* linguist-vendored
 config/credentials/*.yml.enc diff=rails_credentials
 config/credentials.yml.enc diff=rails_credentials
+
+# すべてのテキストファイルの改行コードをLFに統一
+* text=auto eol=lf
