--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 .Ds_Store
+
+# Ignore Zone.Identifier files
+*.Zone.Identifier
